Stats shouldn't overlap in narrow layouts (fixes #6)

--- a/styles.css
+++ b/styles.css
@@ -587,6 +587,15 @@ ul, menu, dir {
     #members {
         padding-top: 0;
     }
+
+    .head-stats li {
+      width: 100%;
+      margin-bottom: 25px;
+    }
+
+    .head-stats li:last-child {
+      margin-bottom: 0px;
+    }
 }
 
 @media screen and (max-width: 410px) {
